--- a/Direct Dial Solutions/index.html
+++ b/Direct Dial Solutions/index.html
@@ -109,11 +109,16 @@
                                     </div>
                                  </div>
                                  <div class="col-md-6">
+                                    <div class="img-box">
+                                       <img src="images/slider-img.png" alt="">
+                                    </div>
+                                 </div>
+                                 <!-- <div class="col-md-6">
                                     <div class="dream_img">
                                        <figure><img src="images/Portrait of beautiful female cyborg.jpg" alt="#" />
                                        </figure>
                                     </div>
-                                 </div>
+                                 </div> -->
                               </div>
                            </div>
                         </div>
@@ -130,7 +135,7 @@
                                     </div>
                                  </div>
                                  <div class="col-md-6">
-                                    <div class="dream_img">
+                                    <div class="img-box">
                                        <figure><img src="images/Generate a 4K high-resolution hyper-realistic imag.jpg"
                                              alt="#" /></figure>
                                     </div>
@@ -151,7 +156,7 @@
                                     </div>
                                  </div>
                                  <div class="col-md-6">
-                                    <div class="dream_img">
+                                    <div class="img-box">
                                        <figure><img src="images/dream_img.jpg" alt="#" /></figure>
                                     </div>
                                  </div>
