--- a/Direct Dial Solutions/about.html
+++ b/Direct Dial Solutions/about.html
@@ -32,7 +32,7 @@
 <body class="main-layout inner_page">
    <!-- loader  -->
    <div class="loader_bg">
-      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+      <div class="loader"><img src="images/loading2.gif" alt="#" /></div>
    </div>
    <!-- end loader -->
    <!-- header -->
@@ -77,9 +77,6 @@
             </div>
             <div class="col-md-2  d_none">
                <ul class="email text_align_right">
-                  <li><a href="Javascript:void(0)"> <i class="fa fa-shopping-bag" aria-hidden="true"> <span>0</span></i>
-                     </a>
-                  </li>
 
                </ul>
             </div>
@@ -166,7 +163,29 @@
                         </div>
                      </div>
                   </div>
+                  <!-- Company Owners Start -->
+                  <div class="container-owner">
+                     <div class="col-md-12">
+                        <div class="titlepage text_align_center">
+                           <h2>Meet <span class="blue_light">Company Owners</span></h2>
+                        </div>
+                     </div>
+                     <div class="owners-slider">
+                        <div class="owner-slide">
+                           <img src="images/owner1.jpeg" alt="Owner 1">
+                           <h3>Akansh Garg</h3>
+                           <p1>CEO</p1>
 
+                        </div>
+                        <div class="owner-slide">
+                           <img src="images/owner2.png" alt="Owner 2">
+                           <h3>Saiyam Tuteja</h3>
+                           <p1>Tech Expert</p1>
+                        </div>
+                        <!-- Add more owner slides as needed -->
+                     </div>
+                  </div>
+                  <!-- Company Owners Ends -->
                   <script>
                      function toggleReadMore() {
                         var moreContent = document.getElementById("moreContent");
