--- a/Direct Dial Solutions/index.html
+++ b/Direct Dial Solutions/index.html
@@ -32,7 +32,7 @@
 <body class="main-layout">
    <!-- loader  -->
    <div class="loader_bg">
-      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+      <div class="loader"><img src="images/loading2.gif" alt="#" /></div>
    </div>
    <!-- end loader -->
    <!-- header -->
@@ -431,6 +431,34 @@
       </div>
    </div>
    <!-- contact -->
+   <!-- Company Owners Start -->
+   <div class="container-owner">
+      <div class="col-md-12">
+         <div class="titlepage text_align_center">
+            <h2>Meet <span class="blue_light">Company Owners</span></h2>
+         </div>
+      </div>
+      <div class="owners-slider">
+         <div class="owner-slide">
+            <img src="images/owner1.jpeg" alt="Owner 1">
+            <h3>Akansh Garg</h3>
+            <p>CEO</p>
+            <p class="description">Akansh Garg, CEO of Direct Dial,<br> leads with visionary strategy, <br>driving
+               innovation in
+               communication solutions</p>
+         </div>
+         <div class="owner-slide">
+            <img src="images/owner2.png" alt="Owner 2">
+            <h3>Saiyam Tuteja</h3>
+            <p>Tech Expert</p>
+            <p class="description">Saiyam Tuteja, Tech Expert at Direct Dial, <br>spearheads technological
+               advancements,<br>
+               ensuring cutting-edge solutions for seamless communication.</p>
+         </div>
+         <!-- Add more owner slides as needed -->
+      </div>
+   </div>
+   <!-- Company Owners Ends -->
    <!--  footer -->
    <footer>
       <div class="footer">
