--- a/Direct Dial Solutions/pricing.html
+++ b/Direct Dial Solutions/pricing.html
@@ -32,7 +32,7 @@
 <body class="main-layout inner_page hosting_page">
    <!-- loader  -->
    <div class="loader_bg">
-      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+      <div class="loader"><img src="images/loading2.gif" alt="#" /></div>
    </div>
    <!-- end loader -->
    <!-- header -->
